NorthSouth/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "fwAvSet": {
            "defaultValue": "AS-FW",
            "type": "String"
        },
        "vmNamefw1": {
            "defaultValue": "vmfw1",
            "type": "String"
        },
        "vmNamefw2": {
            "defaultValue": "vmfw2",
            "type": "String"
        },
        "storageAccountNamefw1": {
            "defaultValue": "vmfw1",
            "type": "String"
        },
        "storageAccountNamefw2": {
            "defaultValue": "vmfw2",
            "type": "String"
        },
        "virtualNetworkName": {
            "defaultValue": "yourvnet",
            "type": "String"
        },
        "vmNamefw1pip": {
            "defaultValue": "vmfw1pip",
            "type": "String"
        },
        "vmNamefw2pip": {
            "defaultValue": "vmfw2pip",
            "type": "String"
        },
        "vmNamefw1untrustpip": {
            "defaultValue": "vmfw1untrustpip",
            "type": "String"
        },
        "nsgName": {
            "defaultValue": "jpvmnsg",
            "type": "String"
        },
        "vmNamefw1-eth0": {
            "defaultValue": "vmfw1-eth0",
            "type": "String"
        },
        "vmNamefw1-eth1": {
            "defaultValue": "vmfw1-eth1",
            "type": "String"
        },
        "vmNamefw1-eth2": {
            "defaultValue": "vmfw1-eth2",
            "type": "String"
        },
        "vmNamefw1-eth3": {
            "defaultValue": "vmfw1-eth3",
            "type": "String"
        },
        "vmNamefw2-eth0": {
            "defaultValue": "vmfw2-eth0",
            "type": "String"
        },
        "vmNamefw2-eth1": {
            "defaultValue": "vmfw2-eth1",
            "type": "String"
        },
        "vmNamefw2-eth2": {
            "defaultValue": "vmfw2-eth2",
            "type": "String"
        },
        "vmNamefw2-eth3": {
            "defaultValue": "vmfw2-eth3",
            "type": "String"
        },
        "subnets_HA": {
            "defaultValue": "HA",
            "type": "String"
        },
        "subnets_Mgmt": {
            "defaultValue": "Mgmt",
            "type": "String"
        },
        "subnets_Trust": {
            "defaultValue": "Trust",
            "type": "String"
        },
        "subnets_Untrust": {
            "defaultValue": "Untrust",
            "type": "String"
        },
        "nnsgName_SSH": {
            "defaultValue": "SSH",
            "type": "String"
        },
        "nsgName_HTTPS": {
            "defaultValue": "HTTPS",
            "type": "String"
        },
    "adminUsername": {
      "type": "string",
      "defaultValue": "pandemo",
      "metadata": {
        "description": "Username of the administrator account of VM-Series"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "defaultValue": "Dem0pa55w0rd",
      "metadata": {
        "description": "Password for the administrator account of VM-Series"
      }
    }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Compute/availabilitySets",
            "sku": {
                "name": "Classic"
            },
            "name": "[parameters('fwAvSet')]",
            "apiVersion": "2018-06-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 2,
                "virtualMachines": [
                    {
                        "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('vmNamefw1'))]"
                    },
                    {
                        "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('vmNamefw2'))]"
                    }
                ]
            },
            "dependsOn": [
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('vmNamefw1')]",
            "apiVersion": "2018-06-01",
            "location": "[resourceGroup().location]",
            "plan": {
                "name": "byol",
                "product": "vmseries1",
                "publisher": "paloaltonetworks"
            },
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('fwAvSet'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_D3_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "paloaltonetworks",
                        "offer": "vmseries1",
                        "sku": "byol",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "osdisk",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('http', '://', parameters('storageAccountNamefw1'), '.blob.core.windows.net', concat('/vhds/', parameters('vmNamefw1'),'-vmseries1-beta-live-byol.vhd'))]"
                        },
                        "caching": "ReadWrite",
                        "diskSizeGB": 60
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('vmNamefw1')]",
					"adminUsername": "[parameters('adminUsername')]",
					"adminPassword": "[parameters('adminPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw1-eth0'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw1-eth1'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw1-eth2'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw1-eth3'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('fwAvSet'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccountNamefw1'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw1-eth0'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw1-eth1'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw1-eth2'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw1-eth3'))]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('vmNamefw2')]",
            "apiVersion": "2018-06-01",
            "location": "[resourceGroup().location]",
            "plan": {
                "name": "byol",
                "product": "vmseries1",
                "publisher": "paloaltonetworks"
            },
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('fwAvSet'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_D3_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "paloaltonetworks",
                        "offer": "vmseries1",
                        "sku": "byol",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "osdisk",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('http', '://', parameters('storageAccountNamefw2'), '.blob.core.windows.net', concat('/vhds/', parameters('vmNamefw2'),'-vmseries1-beta-live-byol.vhd'))]"
                        },
                        "caching": "ReadWrite",
                        "diskSizeGB": 60
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('vmNamefw2')]",
					"adminUsername": "[parameters('adminUsername')]",
					"adminPassword": "[parameters('adminPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw2-eth0'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw2-eth1'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw2-eth2'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw2-eth3'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('fwAvSet'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccountNamefw2'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw2-eth0'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw2-eth1'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw2-eth2'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('vmNamefw2-eth3'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('vmNamefw1-eth0')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "provisioningState": "Succeeded",
                "ipConfigurations": [
                    {
                        "name": "ipconfig-mgmt",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('vmNamefw1pip'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Mgmt'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "2oe1vft2vpwulp415ylenudl0b.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-94-EA-17",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('vmNamefw1pip'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Mgmt'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('vmNamefw1-eth1')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "provisioningState": "Succeeded",
                "ipConfigurations": [
                    {
                        "name": "ipconfig-untrust",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.4",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Untrust'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "Secondary-Untrust",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.6",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('vmNamefw1untrustpip'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Untrust'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "2oe1vft2vpwulp415ylenudl0b.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-96-51-C5",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true,
                "primary": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('vmNamefw1untrustpip'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Untrust'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('vmNamefw1-eth2')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "provisioningState": "Succeeded",
                "ipConfigurations": [
                    {
                        "name": "ipconfig-trust",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.2.4",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Trust'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "Secondary-Trust",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.2.6",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Trust'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "2oe1vft2vpwulp415ylenudl0b.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-96-54-E0",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true,
                "primary": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Trust'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('vmNamefw1-eth3')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "provisioningState": "Succeeded",
                "ipConfigurations": [
                    {
                        "name": "ipconfig-ha",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.3.4",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_HA'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "2oe1vft2vpwulp415ylenudl0b.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-96-5B-CE",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true,
                "primary": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_HA'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('vmNamefw2-eth0')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "provisioningState": "Succeeded",
                "ipConfigurations": [
                    {
                        "name": "ipconfig-mgmt",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.5",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('vmNamefw2pip'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Mgmt'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "2oe1vft2vpwulp415ylenudl0b.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-96-51-35",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('vmNamefw2pip'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Mgmt'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('vmNamefw2-eth1')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "provisioningState": "Succeeded",
                "ipConfigurations": [
                    {
                        "name": "ipconfig-untrust",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.5",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Untrust'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "2oe1vft2vpwulp415ylenudl0b.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-96-54-86",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true,
                "primary": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Untrust'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('vmNamefw2-eth2')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "provisioningState": "Succeeded",
                "ipConfigurations": [
                    {
                        "name": "ipconfig-trust",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.2.5",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Trust'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "2oe1vft2vpwulp415ylenudl0b.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-96-5E-04",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true,
                "primary": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_Trust'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('vmNamefw2-eth3')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "provisioningState": "Succeeded",
                "ipConfigurations": [
                    {
                        "name": "ipconfig-ha",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.3.5",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_HA'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "2oe1vft2vpwulp415ylenudl0b.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-96-55-C6",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true,
                "primary": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnets_HA'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('nsgName')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "provisioningState": "Succeeded",
                "securityRules": [
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "0.0.0.0/0",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "0.0.0.0/0",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "properties": {
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "properties": {
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('vmNamefw1pip')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "ipAddress": "104.43.212.6",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[parameters('vmNamefw1pip')]",
                    "fqdn": "[concat(parameters('vmNamefw1pip'),'.centralus.cloudapp.azure.com')]"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('vmNamefw2pip')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "ipAddress": "104.43.210.49",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[parameters('vmNamefw2pip')]",
                    "fqdn": "[concat(parameters('vmNamefw2pip'),'.centralus.cloudapp.azure.com')]"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('vmNamefw1untrustpip')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "ipAddress": "104.43.212.6",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[parameters('vmNamefw1untrustpip')]",
                    "fqdn": "[concat(parameters('vmNamefw1untrustpip'),'.centralus.cloudapp.azure.com')]"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {         
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworkName')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "Untrust",
                        "properties": {
                            "addressPrefix": "10.0.1.0/24",
                            "serviceEndpoints": []
                        }
                    },
                    {
                        "name": "Trust",
                        "properties": {
                            "addressPrefix": "10.0.2.0/24",
                            "serviceEndpoints": []
                        }
                    },
                    {
                        "name": "HA",
                        "properties": {
                            "addressPrefix": "10.0.3.0/24",
                            "serviceEndpoints": []
                        }
                    },
                    {
                        "name": "Mgmt",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
                            },
                            "serviceEndpoints": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_RAGRS",
                "tier": "Standard"
            },
            "kind": "StorageV2",
            "name": "[parameters('storageAccountNamefw1')]",
            "apiVersion": "2018-07-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": true,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                },
                "accessTier": "Hot"
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_RAGRS",
                "tier": "Standard"
            },
            "kind": "StorageV2",
            "name": "[parameters('storageAccountNamefw2')]",
            "apiVersion": "2018-07-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": true,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                },
                "accessTier": "Hot"
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('nsgName'), '/', parameters('nsgName_HTTPS'))]",
            "apiVersion": "2018-02-01",
            "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "0.0.0.0/0",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('nsgName'), '/', parameters('nnsgName_SSH'))]",
            "apiVersion": "2018-02-01",
            "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "0.0.0.0/0",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 110,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnets_Untrust'))]",
            "apiVersion": "2018-02-01",
            "properties": {
                "addressPrefix": "10.0.1.0/24",
                "serviceEndpoints": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnets_Trust'))]",
            "apiVersion": "2018-02-01",
            "properties": {
                "addressPrefix": "10.0.2.0/24",
                "serviceEndpoints": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnets_HA'))]",
            "apiVersion": "2018-02-01",
            "properties": {
                "addressPrefix": "10.0.3.0/24",
                "serviceEndpoints": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnets_Mgmt'))]",
            "apiVersion": "2018-02-01",
            "properties": {
                "addressPrefix": "10.0.0.0/24",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
                },
                "serviceEndpoints": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
        }
    ]
}
